--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,6 +757,156 @@ header .navbar ul li a:hover {
 .work .viewall .btn:hover i {
   transform: translateX(5px);
 }
+
+/* certificate section starts */
+.certificate {
+  /* background: #010124; */
+  background: linear-gradient(to bottom, #000031, #00002c);
+}
+.certificate h2 {
+  color: #fff;
+  padding: 1rem;
+}
+.certificate .heading span {
+  color: rgb(255, 230, 0);
+}
+.certificate .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  
+  margin: 2rem;
+}
+.certificate .box-container .box {
+  flex: 1 1 30rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  height: 30rem;
+}
+.certificate .box-container .box img {
+  height: 80%;
+  width: 80%;
+  object-fit: cover;
+}
+.certificate .box-container .box .content {
+  height: 80%;
+  width: 80%;
+  position: absolute;
+  top: 80%;
+  left: 0;
+  background: rgba(255, 255, 255, 0.9);
+  display: flex;
+  flex-direction: column;
+}
+.certificate .box-container .box .content .tag {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 4.5rem;
+  width: 100%;
+  padding-left: 1rem;
+  background: #ffd900;
+}
+.certificate .box-container .box .content .tag h3 {
+  font-size: 2rem;
+}
+.certificate .box-container .box:hover .content {
+  top: 25%;
+}
+.certificate .desc {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.certificate .desc p {
+  font-size: 1.5rem;
+}
+.certificate .desc .btns {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 2rem;
+}
+.certificate .desc .btns .btn {
+  line-height: 0;
+  display: inline;
+  padding: 1.5rem 2.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  color: #fff;
+  background: rgb(12, 12, 12);
+  margin-right: 2rem;
+}
+.certificate .desc .btns .btn:hover {
+  background: #310ae0f5;
+}
+.certificate .viewall {
+  display: flex;
+  justify-content: center;
+}
+.certificate .viewall .btn {
+  position: relative;
+  line-height: 0;
+  padding: 1.6rem 3rem;
+  border-radius: 0.5em;
+  transition: 0.5s;
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  border: 2px solid #fff;
+  box-shadow: 0px 5px 10px rgba(65, 84, 241, 0.4);
+  text-align: center;
+}
+.certificate .viewall .btn span {
+  font-weight: 600;
+  font-size: 1.7rem;
+  font-family: "Nunito", sans-serif;
+}
+.certificate .viewall .btn i {
+  margin-left: 0.3rem;
+  font-size: 1.5rem;
+  transition: 0.3s;
+}
+.certificate .viewall .btn:hover {
+  background: #fff;
+  color: #000;
+}
+.certificate .viewall .btn:hover i {
+  transform: translateX(5px);
+}
+
+.section-title h2 {
+  font-size: 14px;
+  font-weight: 500;
+  padding: 0;
+  line-height: 1px;
+  margin: 0 0 20px 0;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #dee2e6;
+  font-family: "Poppins", sans-serif;
+}
+
+.section-title h2::after {
+  content: "";
+  width: 120px;
+  height: 1px;
+  display: inline-block;
+  background: #dee2e6;
+  margin: 4px 10px;
+}
+
+.section-title p {
+  margin: 0;
+  margin: -15px 0 15px 0;
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
 /* work section ends */
 
 /* experience section starts */
@@ -1222,4 +1372,12 @@ form .button-area {
 #scroll-top.active {
   top: calc(100% - 12rem);
 }
+
+
+
+
+
+/* saikat CSS starts here */
+
+
 /* scroll top ends */
