--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,12 +243,12 @@ header .navbar ul li a:hover {
   font-weight: 600;
   padding: 1rem 0;
 }
-.home .btn {
+.home .btn { 
   margin-top: 1rem;
   position: absolute;
   line-height: 0;
   padding: 1.6rem 3rem;
-  border-radius: 4em;
+  border-radius: 1em;
   transition: 0.5s;
   color: #fff;
   background: #2506ad;
@@ -428,6 +428,10 @@ header .navbar ul li a:hover {
   font-size: 1.2rem;
   transition: 0.3s;
 }
+.hero_row {
+display: flex;
+}
+
 .resumebtn .btn:hover {
   background: #1a047e;
 }
@@ -655,6 +659,7 @@ header .navbar ul li a:hover {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
+  width: 100%;
   margin: 2rem;
 }
 .project .box-container .box {
@@ -773,7 +778,8 @@ header .navbar ul li a:hover {
 .certificate .box-container {
   display: flex;
   flex-wrap: wrap;
-  
+   gap: 1.5rem;
+  width: 100%;
   margin: 2rem;
 }
 .certificate .box-container .box {
@@ -785,15 +791,15 @@ header .navbar ul li a:hover {
   height: 30rem;
 }
 .certificate .box-container .box img {
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 .certificate .box-container .box .content {
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   position: absolute;
-  top: 80%;
+  top: 85%;
   left: 0;
   background: rgba(255, 255, 255, 0.9);
   display: flex;
