--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,12 +508,12 @@ display: flex;
   margin-top: 1rem;
 }
 .skills .container .bar .info i {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .skills .container .bar .info span {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 500;
-  font-family: "Poppins";
+  font-family: "Nunito", sans-serif;
   margin-left: 0.5rem;
 }
 /* skills media queries starts*/
@@ -920,6 +920,7 @@ display: flex;
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 30;
 }
 .experience .timeline::after {
   content: "";
@@ -946,14 +947,14 @@ display: flex;
   height: 25px;
   right: -17px;
   background-color: rgb(255, 255, 255);
-  border: 4px solid #ff9f55;
+  border: 4px solid #0D5EA6;
   top: 15px;
   border-radius: 50%;
   z-index: 100;
   font-size: 1.89rem;
   text-align: center;
   font-weight: 600;
-  color: #02094b;
+  color: #FFFF;
   font-family: "Font Awesome\ 5 Free";
 }
 .experience .left {
@@ -971,9 +972,9 @@ display: flex;
   width: 0;
   z-index: 1;
   right: 30px;
-  border: medium solid #f68c09;
+  border: medium solid #0D5EA6;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #f68c09;
+  border-color: transparent transparent transparent #0D5EA6;
 }
 /* arrows pointing left  */
 .experience .right::before {
@@ -984,20 +985,21 @@ display: flex;
   width: 0;
   z-index: 1;
   left: 30px;
-  border: medium solid #f68c09;
+  border: medium solid #0D5EA6;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #f68c09 transparent transparent;
+  border-color: transparent #0D5EA6 transparent transparent;
 }
 .experience .right::after {
   left: -16px;
 }
 .experience .content {
-  background-color: #f68c09;
+  color: #FFFF;
+  background-color: #0D5EA6;
   position: relative;
   border-radius: 6px;
 }
 .experience .content .tag {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   padding-top: 1.5rem;
   padding-left: 1.5rem;
 }
@@ -1006,11 +1008,11 @@ display: flex;
   padding-bottom: 1rem;
 }
 .experience .content .desc h3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 .experience .content .desc p {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 /* view all button */
 .morebtn {
