--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,7 +251,7 @@ header .navbar ul li a:hover {
   border-radius: 1em;
   transition: 0.5s;
   color: #fff;
-  background: #2506ad;
+  background: #0D5EA6;
   box-shadow: 0px 5px 18px rgba(48, 68, 247, 0.6);
   font-family: "Nunito", sans-serif;
 }
@@ -404,7 +404,7 @@ header .navbar ul li a:hover {
   text-transform: none;
 }
 .about .row .content .box-container .box p span {
-  color: #011aff;
+  color: #0D5EA6;
 }
 .resumebtn {
   margin-top: 6rem;
@@ -414,7 +414,7 @@ header .navbar ul li a:hover {
   border-radius: 0.5em;
   transition: 0.3s;
   color: #fff;
-  background: #2506ad;
+  background: #0D5EA6;
   box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
   font-family: "Nunito", sans-serif;
 }
@@ -507,8 +507,14 @@ display: flex;
   gap: 1rem;
   margin-top: 1rem;
 }
+.skills .container .bar .info img {
+  width: 30%;
+  height: 30%;
+}
 .skills .container .bar .info i {
   font-size: 3rem;
+  width: 10px;
+  height: 30px;
 }
 .skills .container .bar .info span {
   font-size: 1.5rem;
